--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Web page</title>
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis voluptatem iusto eum quasi voluptatum possimus repellat doloremque, impedit atque distinctio autem accusantium sequi. Quos reiciendis, est fuga eligendi doloribus deserunt!</h1>
+
+<script src="./script.js">
     
+</script>
 </body>
 </html>
